@startuml
title Diagrama de Clases - Space Shooter MVC

' ================================
'           PAQUETES
' ================================
package "Modelos" {
    class Modelojuego {
        - nivel_actual: int
        - spawn_delay: float
        - puntaje: int
        - game_over: bool
        - jugador: Jugador
        - enemigos: list<Enemigo>
        - proyectiles: list<Proyectil>
        + actualizar()
        + detectar_colisiones()
        + reiniciar()
        + guardar_puntaje(usuario: str)
    }

    class Modeloentidades {
    }

    abstract class Entidad {
        - x: int
        - y: int
        - velocidad: int
        + mover()
        + dibujar()
        + colisiona_con(e: Entidad): bool
    }

    class Jugador {
        - vidas: int
        + disparar(): Proyectil
    }

    class Enemigo {
        - probabilidad_disparo: float
        + disparar(): Proyectil
    }

    class Proyectil {
        - direccion: int
    }

    class usuarios_dao {
        + cargar_usuarios(): dict
        + guardar_usuarios(data: dict)
        + existe_usuario(usuario: str): bool
        + validar(usuario: str, contrasena: str): bool
    }

    class puntaje_dao {
        + cargar_puntajes(): dict
        + guardar_puntajes(data: dict)
        + actualizar_puntaje(usuario: str, puntaje: int)
        + obtener_puntaje(usuario: str): int
    }
}

package "Vista" {
    class VistaPyGame {
        + renderizar(modelo: Modelojuego)
        + mostrar_gameover(puntaje: int, maximo: int)
        + mostrar_hud(vidas: int, puntaje: int, nivel: int)
    }

    class FletLogin {
        + mostrar()
        + login(usuario: str, contrasena: str)
        + registrar(usuario: str, contrasena: str)
        + lanzar_juego(usuario: str)
    }
}

package "Controlador" {
    class Controlador {
        - modelo: Modelojuego
        - vista: VistaPyGame
        + ejecutar()
        + procesar_eventos()
    }
}

' ================================
'         RELACIONES
' ================================

Entidad <|-- Jugador
Entidad <|-- Enemigo
Entidad <|-- Proyectil

Modelojuego "1" --> "1" Jugador
Modelojuego "1" --> "*" Enemigo
Modelojuego "1" --> "*" Proyectil

Controlador --> Modelojuego
Controlador --> VistaPyGame

FletLogin --> usuarios_dao
FletLogin --> puntaje_dao
Modelojuego --> puntaje_dao

VistaPyGame --> Modelojuego : consulta estado

@enduml
